--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,11 @@ playground.xcworkspace
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-Packages/
-Package.pins
 .build/
 .swiftpm/
+Packages/
+Package.pins
+Package.resolved
 
 # CocoaPods
 #
