--- a/.sourcery.yml
+++ b/.sourcery.yml
@@ -1,13 +1,13 @@
 configurations:
+  # - sources:
+  #     - Sources/ContextExamples
+  #   templates:
+  #     - Templates/AutoCodable.swifttemplate
+  #   output:
+  #     Sources/ContextExamples/Generated
   - sources:
-      - Sources/ContextExamples
+      - Sources/SourceryKit/SourceryRuntime
     templates:
-      - Templates/AutoCodable.swifttemplate
+      - Sources/SourceryKit/SourceryRuntime/Templates
     output:
-      Sources/ContextExamples/Generated
-  - sources:
-      - Sources/SourceryRuntime
-    templates:
-      - Sources/SourceryRuntime/Templates
-    output:
-      Sources/SourceryRuntime/Generated
+      Sources/SourceryKit/SourceryRuntime/Generated
