--- a/.sourcery.yml
+++ b/.sourcery.yml
@@ -1,3 +1,3 @@
-sources: Sources/SourceryKit/SourceryRuntime
-templates: Sources/SourceryKit/SourceryRuntime/Templates
-output: Sources/SourceryKit/SourceryRuntime/Generated
+sources: Sources/SourceryKit
+templates: Sources/SourceryKit/Templates
+output: Sources/SourceryKit/Generated
